--- a/src/app/_components/Header/HeaderComponent/index.module.scss
+++ b/src/app/_components/Header/HeaderComponent/index.module.scss
@@ -1,15 +1,19 @@
-.header{
+.header {
     padding: 36px 0;
-}
-
-.wrap{
- display: flex;
- align-items: center;
- justify-content: space-between;
- flex-wrap: wrap;
- gap: calc(var(--base)/2) var(--base);
-}
-
-.logo{
+  }
+  
+  .wrap {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: calc(var(--base) / 2) var(--base)
+  }
+  
+  .logo {
     width: 170px;
-}
+  }
+  
+  .hide { 
+    display: none;
+  }
