--- a/src/app/(pages)/create-account/index.module.scss
+++ b/src/app/(pages)/create-account/index.module.scss
@@ -11,7 +11,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    background-image: url('/assets/images/image-2.svg');
+    background-image: url('/newuser.jpg');
   }
 
   p {
@@ -45,7 +45,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  background-image: url('/assets/images/image-2.svg');
+  background-image: url('/newuser.jpg');
 
   @include mid-break {
     background: none;
