--- a/src/app/(pages)/recover-password/index.module.scss
+++ b/src/app/(pages)/recover-password/index.module.scss
@@ -11,7 +11,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    background-image: url('/assets/images/image-3.svg');
+    background-image: url('/forgot.jpg');
   }
 
   p {
@@ -25,7 +25,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  background-image: url('/assets/images/image-3.svg');
+  background-image: url('/forgot.jpg');
 
   @include mid-break {
     background: none;
@@ -106,7 +106,6 @@
 .backLink {
   display: flex;
   align-items: center;
-  margin-bottom: 30px;
   gap: 4px;
   text-decoration: none;
 
